[package]
name = "baca"
version = "0.5.0-wip"
authors = ["Hubert Jaremko <hjaremko@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "multipart"] }
dyn-fmt = "0.3"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
zip = "0.5"
dialoguer = "0.9"
time = { version = "0.3", features = ["serde"] }
merge = "0.1"
regex = "1.5"

[dev-dependencies]
mockall = "0.10"
assert_cmd = "2.0"
predicates = "2.0"
assert_fs = "1.0"
