[package]
name = "baca"
version = "0.5.0"
authors = ["Hubert Jaremko <hjaremko@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"] }
tracing = "0"
tracing-subscriber = "0"
reqwest = { version = "0", features = ["blocking", "json", "cookies", "multipart"] }
dyn-fmt = "0"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
zip = "0"
dialoguer = "0"
time = { version = "0", features = ["serde"] }
merge = "0"
regex = "1"
deunicode = "1"

[dev-dependencies]
mockall = "0"
assert_cmd = "2"
predicates = "2"
assert_fs = "1"
tempfile = "3"
